fix: Fix changing accounts not showing add logo button if the company is not added

--- a/src/app/modules/employees/components/employees/employees.component.scss
+++ b/src/app/modules/employees/components/employees/employees.component.scss
@@ -36,10 +36,6 @@
     }
 }
 
-.company-logo-btn {
-    margin-bottom: 1.5rem;
-}
-
 .company-logo-container {
     position: relative;
     max-width: 80px;
